# test_work

./: CMakeLists.txt  bird.cpp  bird.h  bomber.cpp  bomber.h  bullet.cpp  bullet.h  bulletfactory.cpp  bulletfactory.h  common.h  fighter.cpp  fighter.h  gamemaster.cpp  gamemaster.h  main.cpp  movingobject.cpp  movingobject.h  player.cpp  player.h
